added drag&Drop and fix styles for product cards

--- a/src/index.html
+++ b/src/index.html
@@ -189,14 +189,14 @@
     </div>
 
 
-
     <div class="container">
       <div class="goods">
 
-        <section class="card-product">
+        <div class="draggable-element" draggable="true">
+          <section id="1" class="card-product">
           <div class="card-product__image"></div>
           <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+            <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка1 Минск МШМ-125/1350</a>
           </h2>
           <p class="card-product__description">
             <span class="card-product__specifications">Производитель: Минск</span>
@@ -206,14 +206,16 @@
           </p>
           <footer class="card-product__footer">
             <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
+            <button class="card-product__buy-button">Купить</button>
           </footer>
         </section> <!--end of card-product-->
+        </div>
 
-        <section class="card-product">
+        <div class="draggable-element" draggable="true">
+          <section id="2" class="card-product">
           <div class="card-product__image"></div>
           <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
+            <a href="link-to-product" class="card-product__link" draggable="false">Болгарка2 Минск МШМ-125/1350</a>
           </h2>
           <p class="card-product__description">
             <span class="card-product__specifications">Производитель: Минск</span>
@@ -223,230 +225,29 @@
           </p>
           <footer class="card-product__footer">
             <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
+            <button class="card-product__buy-button">Купить</button>
           </footer>
         </section> <!--end of card-product-->
+        </div>
 
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
-
-        <section class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link">Болгарка Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product_buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
+        <div class="draggable-element" draggable="true">
+          <section id="3" class="card-product">
+            <div class="card-product__image"></div>
+            <h2 class="card-product__header">
+              <a href="link-to-product" class="card-product__link" draggable="false">Болгарка3 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
+        </div>
 
       </div> <!--end of goods-->
     </div> <!--end of container-->
