--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,9 @@
 
         <div class="draggable-element" draggable="true">
           <section id="1" class="card-product">
-          <div class="card-product__image"></div>
+          <figure class="card-product__image-wrapper">
+            <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+          </figure>
           <h2 class="card-product__header">
             <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка1 Минск МШМ-125/1350</a>
           </h2>
@@ -213,28 +215,179 @@
 
         <div class="draggable-element" draggable="true">
           <section id="2" class="card-product">
-          <div class="card-product__image"></div>
-          <h2 class="card-product__header">
-            <a href="link-to-product" class="card-product__link" draggable="false">Болгарка2 Минск МШМ-125/1350</a>
-          </h2>
-          <p class="card-product__description">
-            <span class="card-product__specifications">Производитель: Минск</span>
-            <span class="card-product__specifications">Мощность: 1350Вт</span>
-            <span class="card-product__specifications"> Диаметр круга: 125мм</span>
-            <span class="card-product__specifications">Вес: 2,6кг</span>
-          </p>
-          <footer class="card-product__footer">
-            <span class="card-product__price">3270890 руб.</span>
-            <button class="card-product__buy-button">Купить</button>
-          </footer>
-        </section> <!--end of card-product-->
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
+            <h2 class="card-product__header">
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка2 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
         </div>
 
         <div class="draggable-element" draggable="true">
           <section id="3" class="card-product">
-            <div class="card-product__image"></div>
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
             <h2 class="card-product__header">
-              <a href="link-to-product" class="card-product__link" draggable="false">Болгарка3 Минск МШМ-125/1350</a>
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка3 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
+        </div>
+
+        <div class="draggable-element" draggable="true">
+          <section id="4" class="card-product">
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
+            <h2 class="card-product__header">
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка4 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
+        </div>
+
+        <div class="draggable-element" draggable="true">
+          <section id="5" class="card-product">
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
+            <h2 class="card-product__header">
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка5 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
+        </div>
+
+        <div class="draggable-element" draggable="true">
+          <section id="6" class="card-product">
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
+            <h2 class="card-product__header">
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка6 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
+        </div>
+
+        <div class="draggable-element" draggable="true">
+          <section id="7" class="card-product">
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
+            <h2 class="card-product__header">
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка7 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
+        </div>
+
+        <div class="draggable-element" draggable="true">
+          <section id="8" class="card-product">
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
+            <h2 class="card-product__header">
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка8 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
+        </div>
+
+        <div class="draggable-element" draggable="true">
+          <section id="9" class="card-product">
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
+            <h2 class="card-product__header">
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка9 Минск МШМ-125/1350</a>
+            </h2>
+            <p class="card-product__description">
+              <span class="card-product__specifications">Производитель: Минск</span>
+              <span class="card-product__specifications">Мощность: 1350Вт</span>
+              <span class="card-product__specifications"> Диаметр круга: 125мм</span>
+              <span class="card-product__specifications">Вес: 2,6кг</span>
+            </p>
+            <footer class="card-product__footer">
+              <span class="card-product__price">3270890 руб.</span>
+              <button class="card-product__buy-button">Купить</button>
+            </footer>
+          </section> <!--end of card-product-->
+        </div>
+
+        <div class="draggable-element" draggable="true">
+          <section id="10" class="card-product">
+            <figure class="card-product__image-wrapper">
+              <img  src="images/angle_grinder.jpg" class="card-product__image" alt="">
+            </figure>
+            <h2 class="card-product__header">
+              <a href="link-to-product"  class="card-product__link" draggable="false">Болгарка10 Минск МШМ-125/1350</a>
             </h2>
             <p class="card-product__description">
               <span class="card-product__specifications">Производитель: Минск</span>
